--- a/Ticketing/appsettings.json
+++ b/Ticketing/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Shaparak": {
+    "ApiKey": "123456789"
+  }
 }
